Updated data and styling

--- a/public/profile/projects.json
+++ b/public/profile/projects.json
@@ -7,7 +7,7 @@
             "links": [
                 {
                     "text": "GitHub",
-                    "href": "#"
+                    "href": "https://github.com/Shaheer-rossoneri14/portfolio-react"
                 },
                 {
                     "text": "Live",
@@ -27,12 +27,13 @@
             "links": [
                 {
                     "text": "GitHub",
-                    "href": ""
+                    "href": "https://github.com/Shaheer-rossoneri14/CMRiLearn#readme"
                 }
             ],
             "tags" : [
                 "Python",
                 "Django",
+                "SQLite",
                 "BootStrap"
             ]
         },
@@ -43,7 +44,7 @@
             "links": [
                 {
                     "text": "GitHub",
-                    "href": ""
+                    "href": "https://github.com/Shaheer-rossoneri14/e_commerce_api#readme"
                 }
             ],
             "tags" : [
@@ -60,7 +61,7 @@
             "links": [
                 {
                     "text": "GitHub",
-                    "href": ""
+                    "href": "https://github.com/Shaheer-rossoneri14/Sortipy#readme"
                 }
             ],
             "tags" : [
@@ -76,7 +77,7 @@
             "links": [
                 {
                     "text": "GitHub",
-                    "href": ""
+                    "href": "https://github.com/Shaheer-rossoneri14/LabSpot_Discussion_Forum#readme"
                 }
             ],
             "tags" : [
@@ -95,7 +96,7 @@
             "links": [
                 {
                     "text": "GitHub",
-                    "href": ""
+                    "href": "https://github.com/Shaheer-rossoneri14/moziety_form#readme"
                 }
             ],
             "tags" : [
