--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "vertical-timeline-component-for-react": "^1.0.7",
     "web-vitals": "^1.0.1"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
