--- a/public/profile/projects.json
+++ b/public/profile/projects.json
@@ -11,7 +11,7 @@
                 },
                 {
                     "text": "Live",
-                    "href": "#"
+                    "href": "https://portfolio-shaheer-hasans-projects.vercel.app/"
                 }
             ],
             "tags" : [
